src/main/java/org/example/jjava_main/_core/error/ex/Exception401.java
package org.example.jjava_main._core.error.ex;

public class Exception401 extends RuntimeException {
    public Exception401(String message) {
        super(message);
    }
}
